--- a/oe-feel-designer.html
+++ b/oe-feel-designer.html
@@ -21,7 +21,10 @@
         </style>
         <div class="component-container layout vertical">
             <div class="component-workspace layout horizontal flex">
-                <oe-feel-editor id="editor" services="{{serviceList}}"
+                <oe-feel-editor id="editor" 
+                on-editor-panel-closed="_EditorClosed"
+                on-editor-panel-opened="_EditorOpened"
+                services="{{serviceList}}"
                 decision-graph="[[_getCurrentGraph(_currentStackIndex)]]"></oe-feel-editor>
             </div>
         </div>
@@ -37,7 +40,6 @@
                 'update-component-position': '_handlePositionUpdate',
                 'undo-decision-graph': '_handleUndoGraph',
                 'redo-decision-graph': '_handleRedoGraph',
-                // 'validate-decision-graph':'_handleValidateGraph',
                 'validation-complete':'_handleValidationResult',
                 'update-connection': '_handleConnectionUpdate',
                 'delete-connection':'_handleDeleteConnection',
@@ -76,7 +78,12 @@
                     'payload': detail
                 });
             },
-
+            _EditorOpened:function(e){
+                this._footerFire('change-toolbar-display',{show:false});
+            },
+            _EditorClosed:function(e){
+                this._footerFire('change-toolbar-display',{show:true});
+            },
             //Event Handlers
             _graphSelected: function (e) {
                 var self = this;
